--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML>
-<TITLE> Galathara Kahanda’s Homepage</TITLE>
+<TITLE> Cassandra Dennis's Homepage</TITLE>
 <BODY>
-Hello and welcome to my homepage !!!
+<font color="#FFC0CB"> Hello and welcome to my homepage !!! </font>
 </BODY>
 </HTML>
