--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <HTML>
 <TITLE> Cassandra Dennis's Homepage</TITLE>
 <BODY>
+ <head>
+<link rel="index" type="text/css" href="index.css">
+</head>
 <font color="#FFC0CB"> Hello and welcome to my homepage !!! </font>
 
  
