--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <TITLE> Cassandra Dennis's Homepage</TITLE>
 <BODY>
  <head>
-<link rel="index" type="text/css" href="index.css">
+<link rel="index" type="text/css" href="index.ccs">
 </head>
 <font color="#FFC0CB"> Hello and welcome to my homepage !!! </font>
 
