--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <TITLE> Cassandra Dennis's Homepage</TITLE>
 <head>
-<link rel="CSC-350-Project-1" type="text/css" href="index.ccs">
+<link rel="stylesheet" type="text/css" href="index.ccs">
 </head>
  <BODY>
 <font color="#FFC0CB"> Hello and welcome to my homepage !!! </font>
