--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML>
 <head>
-<link rel="stylesheet" type="text/css" href="style.ccs">
+<link rel="stylesheet" type="text/css" href="./style.ccs">
 </head>
  <TITLE> Cassandra Dennis's Homepage</TITLE>
  <BODY>
