--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <HTML>
 <head>
-<link rel="stylesheet" href="./style.ccs">
-
+<link rel="stylesheet" href="./style.css">
+</head>
  <TITLE> Cassandra Dennis's Homepage</TITLE>
  <BODY>
 <font color="#FFC0CB"> Hello and welcome to my homepage !!! </font>
@@ -10,6 +10,6 @@
  
 
 
-</head>
+
 </BODY>
 </HTML>
