--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
  <TITLE> Cassandra Dennis's Homepage</TITLE>
  <BODY>
-<font color="#FFC0CB"> Hello and welcome to my homepage !!! </font>
-
- 
+<h1> Hello and Welcome to My Homepage </h1>
+ <p>These are some things about me: </p>
+  <p>My Hobbies: </p>
 
 
 
