--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1> Hello and Welcome to My Homepage </h1>
  <p>These are some things about me: </p>
   <p>My Hobbies: </p>
-
+<a href="BMCC.html">go to bmcc page</a>
 
 
 </BODY>
