--- a/BMCC.html
+++ b/BMCC.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <HTML>
+<head>
+<link rel="stylesheet" href="./style2.css">
+</head>
 <TITLE> Heading Demo Page</TITLE>
 <BODY>
 <h1>This is heading 1</h1>
