--- a/BMCC.html
+++ b/BMCC.html
@@ -9,6 +9,6 @@
 <h2>This is heading 2</h2>
 <h3>This is heading 3</h3>
   <a href="index.html">Back to homepage</a>
-  <img src=“https://bmccprodstroac.blob.core.windows.net/uploads/ported/about_bmcc/img/fiterman.jpg" width="110" height=“150">
+  <img src=“https://www.pexels.com/photo/gold-and-silver-scissor-461035/" width="110" height=“150">
 </BODY>
 </HTML>
