--- a/BMCC.html
+++ b/BMCC.html
@@ -9,6 +9,6 @@
 <h2>This is heading 2</h2>
 <h3>This is heading 3</h3>
   <a href="index.html">Back to homepage</a>
-  <img src"https://via.placeholder.com/150" alt="Placeholder Image" />
+  <img src"https://bmccprodstroac.blob.core.windows.net/uploads/ported/about_bmcc/img/fiterman.jpg" />
 </BODY>
 </HTML>
