--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
  <BODY>
 <h1> Hello and Welcome to My Homepage </h1>
  <p>These are some things about me: </p>
-  <p>My Hobbies: </p>
+  <h2>My Hobbies: </h2>
+  <ul>
+<li> Sewing </li>
+<li> Reading </li>
+<li> Skating </li>
+  </ul>
+   <h2>My Favorite Foods: </h2>
+  <ul>
+<li> Spahetti </li>
+<li> Sushi </li>
+<li> Broccoli  </li>
+  </ul>
 <a href="BMCC.html">go to bmcc page</a>
 
 
