--- a/BMCC.html
+++ b/BMCC.html
@@ -9,6 +9,6 @@
 <h2>This is heading 2</h2>
 <h3>This is heading 3</h3>
   <a href="index.html">Back to homepage</a>
-  <img src"https://bmccprodstroac.blob.core.windows.net/uploads/ported/about_bmcc/img/fiterman.jpg" />
+  <img src"https://media.istockphoto.com/id/494431897/vector/sewing-and-needlework-icons-vector-set.jpg?s=1024x1024&w=is&k=20&c=98-RNkQ8yTO-K3Sm_QB48U7KOecEeL0kbHMG8hKvltA=" />
 </BODY>
 </HTML>
