--- a/MyResume.html
+++ b/MyResume.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<HTML>
+<head>
+<link rel="stylesheet" href="./style3.css">
+</head>
+ <TITLE> Cassandra Dennis's Resume </TITLE>
+ <BODY>
+<h1> Cassandra Dennis </h1>
+ <p>These are some things about me: </p>
+  <h2>My Hobbies: </h2>
+  <ul>
+<li> Sewing </li>
+<li> Reading </li>
+<li> Skating </li>
+  </ul>
+   <h2>My Favorite Foods: </h2>
+  <ul>
+<li> Spahetti </li>
+<li> Sushi </li>
+<li> Broccoli  </li>
+  </ul>
+<a href="BMCC.html">go to bmcc page</a>
 
+
+</BODY>
+</HTML>
