--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
  <TITLE> Cassandra Dennis's Homepage</TITLE>
  <BODY>
 <h1> Hello and Welcome to My Homepage </h1>
- <p>These are some things about me: </p>
+ <h2>These are some things about me: </h2>
   <h2>My Hobbies: </h2>
   <ul>
 <li> Sewing </li>
-<li> Reading </li>
+<li> Gardening </li>
 <li> Skating </li>
   </ul>
+  <img src=“https://www.bhg.com/thmb/xktLhC5JenSEcBglx37FSUumqTo=/1244x0/filters:no_upscale():strip_icc()/stone-walkway-leading-garden-ccab4820-64cc37892feb45a58001bc53f6ba7aeb.jpg" width="110" height=“150">
+
    <h2>My Favorite Foods: </h2>
   <ul>
 <li> Spahetti </li>
