--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <li> Gardening </li>
 <li> Skating </li>
   </ul>
-  <img src=“https://www.bhg.com/thmb/xktLhC5JenSEcBglx37FSUumqTo=/1244x0/filters:no_upscale():strip_icc()/stone-walkway-leading-garden-ccab4820-64cc37892feb45a58001bc53f6ba7aeb.jpg" width="110" height=“150">
+  <img src=“https://images.pexels.com/photos/675313/pexels-photo-675313.jpeg?auto=compress&cs=tinysrgb&w=1200" width="110" height=“150">
 
    <h2>My Favorite Foods: </h2>
   <ul>
