--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <li> Gardening </li>
 <li> Skating </li>
   </ul>
-  <img src=“https://images.pexels.com/photos/675313/pexels-photo-675313.jpeg?auto=compress&cs=tinysrgb&w=1200" width="110" height=“150">
+  <img src=“https://images.pexels.com/photos/675313/pexels-photo-675313.jpeg" width="110" height=“150">
 
    <h2>My Favorite Foods: </h2>
   <ul>
