--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <li> Gardening </li>
 <li> Skating </li>
   </ul>
- <img src=“https://images.pexels.com/photos/675313/pexels-photo-675313.jpeg" width="110" height=“150">
+ <img src="pic_trulli.jpg" alt="Italian Trulli">
 
    <h2>My Favorite Foods: </h2>
   <ul>
