--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <li> Gardening </li>
 <li> Skating </li>
   </ul>
- <img src="pic_trulli.jpg" alt="Italian Trulli">
-
+ <a href="default.asp">
+  <img src="smiley.gif" alt="HTML tutorial" style="width:42px;height:42px;">
+</a>
    <h2>My Favorite Foods: </h2>
   <ul>
 <li> Spahetti </li>
