--- a/BMCC.html
+++ b/BMCC.html
@@ -5,10 +5,17 @@
 </head>
 <TITLE> Heading Demo Page</TITLE>
 <BODY>
-<h1>This is heading 1</h1>
-<h2>This is heading 2</h2>
-<h3>This is heading 3</h3>
-  <a href="index.html">Back to homepage</a>
-  <img src"https://media.istockphoto.com/id/494431897/vector/sewing-and-needlework-icons-vector-set.jpg?s=1024x1024&w=is&k=20&c=98-RNkQ8yTO-K3Sm_QB48U7KOecEeL0kbHMG8hKvltA=" />
+<table>
+<tr>
+<th>Course Name</th>
+<th colspan="2">Day and Time</th>
+</tr>
+<tr>
+<td>Software Development</td>
+<td>Saturday 12:00 – 2:40 pm</td>
+<td>Sunday 12:00 – 1:40 pm</td>
+</tr>
+</table>
+
 </BODY>
 </HTML>
