--- a/BMCC.html
+++ b/BMCC.html
@@ -5,7 +5,7 @@
 </head>
 <TITLE> Heading Demo Page</TITLE>
 <BODY>
-<table>
+<table style="width:100%">
 <tr>
 <th>Course Name</th>
 <th colspan="2">Day and Time</th>
@@ -16,6 +16,7 @@
 <td>Sunday 12:00 – 1:40 pm</td>
 </tr>
 </table>
+
 
 </BODY>
 </HTML>
