--- a/BMCC.html
+++ b/BMCC.html
@@ -9,11 +9,27 @@
 <tr>
 <th>Course Name</th>
 <th colspan="2">Day and Time</th>
+<th colspan="2">Term</th>
 </tr>
 <tr>
 <td>Software Development</td>
-<td>Saturday 12:00 – 2:40 pm</td>
-<td>Sunday 12:00 – 1:40 pm</td>
+<td>Saturday 12:00pm – 5:50pm</td>
+<td>Spring 2025</td>
+</tr>
+  <tr>
+<td>Database Systems I </td>
+<td>Mondays & Wednesdays 11:30am – 1:45pm</td>
+<td>Spring 2025</td>
+</tr>
+  <tr>
+<td>Fund. of Computer Syetems</td>
+<td>Mondays & Wednesdays 5:20pm – 7:00pm</td>
+<td>Spring 2025</td>
+</tr>
+  <tr>
+<td>University Physics</td>
+<td>Wednesdays 8:00am – 10:45am</td>
+<td>Spring 2025</td>
 </tr>
 </table>
 
