--- a/BMCC.html
+++ b/BMCC.html
@@ -9,26 +9,30 @@
 <tr>
 <th>Course Name</th>
 <th colspan="2">Day and Time</th>
-<th colspan="3">Term</th>
+<th>Term</th>
 </tr>
 <tr>
 <td>Software Development</td>
 <td>Saturday 12:00pm – 5:50pm</td>
+<td> - </td>
 <td>Spring 2025</td>
 </tr>
   <tr>
 <td>Database Systems I </td>
-<td>Mondays & Wednesdays 11:30am – 1:45pm</td>
+<td>Mondays 11:30am – 1:45pm</td>
+<td>Wednesdays 11:30am – 1:45pm </td>
 <td>Spring 2025</td>
 </tr>
   <tr>
 <td>Fund. of Computer Syetems</td>
 <td>Mondays & Wednesdays 5:20pm – 7:00pm</td>
+<td>Wednesdays 5:20pm – 7:00pm</td>
 <td>Spring 2025</td>
 </tr>
   <tr>
 <td>University Physics</td>
 <td>Wednesdays 8:00am – 10:45am</td>
+<td> - </td>
 <td>Spring 2025</td>
 </tr>
 </table>
