--- a/BMCC.html
+++ b/BMCC.html
@@ -3,8 +3,15 @@
 <head>
 <link rel="stylesheet" href="./style2.css">
 </head>
-<TITLE> Heading Demo Page</TITLE>
+<TITLE> My College Info </TITLE>
 <BODY>
+<h1> My College Info </h1>
+  <ol> 
+  <li>College I attend: BMCC</li>
+  <li>College Level: Undergraduate</li>
+  <li>College Major: Computer Science</li>
+<h2> My Current Class Sechdule</h2>    
+</ol>
 <table style="width:100%">
 <tr>
 <th>Course Name</th>
