--- a/BMCC.html
+++ b/BMCC.html
@@ -7,9 +7,9 @@
 <BODY>
 <h1> My College Info </h1>
   <ul> 
-  <li>College I attend: BMCC</li>
+  <li>College I Attend: BMCC</li>
   <li>College Level: Undergraduate</li>
-  <li>College Major: Computer Science</li>
+  <li>College Major: <mark> Computer Science </mark> </li>
 <h2> My Current Class Sechdule</h2>    
 </ul>
 <table style="width:100%">
