--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 <li> Sushi </li>
 <li> Broccoli  </li>
   </ul>
+  About My College Life
 <a href="BMCC.html">go to bmcc page</a>
-
+  My Experience 
+<a href="MyResume.html">go to bmcc page</a>
 
 </BODY>
 </HTML>
