--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 <li> Sushi </li>
 <li> Broccoli  </li>
   </ul>
+  <img src="programming.gif" alt="Computer Man" style="width:48px;height:48px;">
   About My College Life
 <a href="BMCC.html">go to bmcc page</a>
-  My Experience 
+<br>  My Experience 
 <a href="MyResume.html">go to bmcc page</a>
 
 </BODY>
