--- a/MyResume.html
+++ b/MyResume.html
@@ -5,20 +5,18 @@
 </head>
  <TITLE> Cassandra Dennis's Resume </TITLE>
  <BODY>
-<h1> Cassandra Dennis </h1>
- <p>These are some things about me: </p>
-  <h2>My Hobbies: </h2>
-  <ul>
-<li> Sewing </li>
-<li> Reading </li>
-<li> Skating </li>
-  </ul>
-   <h2>My Favorite Foods: </h2>
-  <ul>
-<li> Spahetti </li>
-<li> Sushi </li>
-<li> Broccoli  </li>
-  </ul>
+<h1> Cassandra Dennis <br> </h1>
+  <p>New York, New York <br> <a href="mailto:notmyemail@gmail.com"> notmyemail@gmail.com </a> <br> (123)456-7890</p>
+  <hr>
+ <h3>Education </h3>
+  <hr>
+  <h3>Education </h3>
+  <hr>
+<h3>Education </h3>
+  <hr>
+<h3>Education </h3>
+  <hr>
+  
 <a href="BMCC.html">go to bmcc page</a>
 
 
