--- a/MyResume.html
+++ b/MyResume.html
@@ -6,10 +6,12 @@
  <TITLE> Cassandra Dennis's Resume </TITLE>
  <BODY>
 <h1> Cassandra Dennis <br> </h1>
-  <p>New York, New York <br> <a href="mailto:notmyemail@gmail.com"> notmyemail@gmail.com </a> <br> (123)456-7890</p>
-  <hr>
+  <p1>New York, New York <br> <a href="mailto:notmyemail@gmail.com"> notmyemail@gmail.com </a> <br> (123)456-7890<br><br></p1>
+  
  <h3>Education </h3>
   <hr>
+  <p2><i>Bachelors in Computer Science</i> <br> Bighamton University </p2>
+  <p3>August 2025 - June 2027 <br> Bighamton, New York</p3>
   <h3>Education </h3>
   <hr>
 <h3>Education </h3>
