--- a/MyResume.html
+++ b/MyResume.html
@@ -10,14 +10,14 @@
   
  <h2>Education </h2>
   <hr>
-  <h2><i>Bachelors in Computer Science</i> <br> Bighamton University </h2>
+  <p><i>Bachelors in Computer Science</i> <br> Bighamton University </p>
   <h3>August 2025 - June 2027 <br> Bighamton, New York</h3>
   <h2> Experience </h2>
   <hr>
   <h2><i>Software Developer </i> <br> Google </h2>
   <h3>July 2027 - Current <br> New York, New York<br><br></h3>
   <h2><i> IT Specialist </i> <br> Amazon </h2>
-  <h3>June 2024 - July 2027 <br> Liverpool, New York</h3>
+  <h3><i> June 2024 - July 2027 </i> <br> Liverpool, New York</h3>
 <h2>Skills </h2>
   <hr>
 <h3>Education </h3>
