--- a/MyResume.html
+++ b/MyResume.html
@@ -6,22 +6,35 @@
  <TITLE> Cassandra Dennis's Resume </TITLE>
  <BODY>
 <h1> Cassandra Dennis <br> </h1>
-  <p>New York, New York <br> <a href="mailto:notmyemail@gmail.com"> notmyemail@gmail.com </a> <br> (123)456-7890<br><br></p>
+  <p>New York, New York </p> 
+  <p> <a href="mailto:notmyemail@gmail.com"> notmyemail@gmail.com </a> </p> 
+  <p>(123)456-7890</p>
   
- <h2>Education </h2>
+<h2>Education </h2>
   <hr>
-  <p><i>Bachelors in Computer Science</i> <br> Bighamton University </p>
-  <h3>August 2025 - June 2027 <br> Bighamton, New York</h3>
+  <p><i>Bachelors in Computer Science</i> 
+  <p style="tex-align:right>August 2025 - June 2027 </p?
+   <p> Bighamton University </p>
+   <p style="tex-align:right> Bighamton, New York</p>
   <h2> Experience </h2>
   <hr>
-  <h2><i>Software Developer </i> <br> Google </h2>
-  <h3>July 2027 - Current <br> New York, New York<br><br></h3>
-  <h2><i> IT Specialist </i> <br> Amazon </h2>
-  <h3><i> June 2024 - July 2027 </i> <br> Liverpool, New York</h3>
+  <h3><i>Software Developer </i> </h3>
+  <h3 style="tex-align:right>July 2027 - Current </h3>
+  <p> Google </p>
+  <p style="tex-align:right> New York, New York</p>
+  <h3><i> IT Specialist </i> 
+  <h3 style="tex-align:right><i> June 2024 - July 2027 </i> </h3>
+  <p> Amazon </p>
+  <p style="tex-align:right> Liverpool, New York</p>
 <h2>Skills </h2>
+   <ul>
+    <li> Excel </li>
+    <li> C++ </li>
+    <li> Advanced Computer Knowledge  </li>
+    <li> HTML/CSS </li>
+   </ul>
   <hr>
-<h3>Education </h3>
-  <hr>
+
   
 <a href="BMCC.html">go to bmcc page</a>
 
