--- a/MyResume.html
+++ b/MyResume.html
@@ -9,31 +9,46 @@
   <p>New York, New York </p> 
   <p> <a href="mailto:notmyemail@gmail.com"> notmyemail@gmail.com </a> </p> 
   <p>(123)456-7890</p>
-  
-<h2>Education </h2>
   <hr>
-  <p><i>Bachelors in Computer Science</i> 
-  <p style="tex-align:right>August 2025 - June 2027 </p?
-   <p> Bighamton University </p>
-   <p style="tex-align:right> Bighamton, New York</p>
-  <h2> Experience </h2>
-  <hr>
-  <h3><i>Software Developer </i> </h3>
-  <h3 style="tex-align:right>July 2027 - Current </h3>
-  <p> Google </p>
-  <p style="tex-align:right> New York, New York</p>
-  <h3><i> IT Specialist </i> 
-  <h3 style="tex-align:right><i> June 2024 - July 2027 </i> </h3>
-  <p> Amazon </p>
-  <p style="tex-align:right> Liverpool, New York</p>
-<h2>Skills </h2>
-   <ul>
+  <table style="width:100%">
+<tr>
+<td>
+ <h2> Education</h2>
+ <h3>Bachelors in Computer Science </h3>
+ <p>Bighamton University - 2027 </p>
+</td>
+<td><h2> Skills</h2>
+ <ul>
     <li> Excel </li>
     <li> C++ </li>
     <li> Advanced Computer Knowledge  </li>
     <li> HTML/CSS </li>
    </ul>
-  <hr>
+</td>
+</tr>
+</table>
+
+  <table style="width:100%">
+<tr>
+<td>
+ <h2> Experience</h2>
+ <h3>Software Developer | July 2027 - Current </h3>
+ <ul>
+    <li> Doing this </li>
+    <li> Doing that </li>
+   </ul>
+</td>
+<td><h> References </h2>
+ <ul>
+    <li> Bill gates </li>
+    <li> My dad </li>
+    
+   </ul>
+</td>
+</tr>
+</table>
+
+  
 
   
 <a href="BMCC.html">go to bmcc page</a>
