--- a/MyResume.html
+++ b/MyResume.html
@@ -6,16 +6,17 @@
  <TITLE> Cassandra Dennis's Resume </TITLE>
  <BODY>
 <h1> Cassandra Dennis <br> </h1>
-  <p>New York, New York </p> 
-  <p> <a href="mailto:notmyemail@gmail.com"> notmyemail@gmail.com </a> </p> 
-  <p>(123)456-7890</p>
+  <p style="text-align:center" >New York, New York <br> <a href="mailto:notmyemail@gmail.com"> notmyemail@gmail.com </a> <br> 
+  (123)456-7890</p>
   <hr>
   <table style="width:100%">
 <tr>
 <td>
  <h2> Education</h2>
  <h3>Bachelors in Computer Science </h3>
- <p>Bighamton University - 2027 </p>
+ <ul>
+    <li> Bighamton University - 2027 </li>
+   </ul>
 </td>
 <td><h2> Skills</h2>
  <ul>
