--- a/MyResume.html
+++ b/MyResume.html
@@ -14,9 +14,8 @@
 <td>
  <h2> Education</h2>
  <h3>Bachelors in Computer Science </h3>
- <ul>
-    <li> Bighamton University - 2027 </li>
-   </ul>
+ <p> Bighamton University - 2027 </p>
+  
 </td>
 <td><h2> Skills</h2>
  <ul>
