--- a/MyResume.html
+++ b/MyResume.html
@@ -38,7 +38,7 @@
     <li> Doing that </li>
    </ul>
 </td>
-<td><h> References </h2>
+<td><h2> References </h2>
  <ul>
     <li> Bill gates </li>
     <li> My dad </li>
