--- a/MyResume.html
+++ b/MyResume.html
@@ -15,20 +15,21 @@
  <h2> Education</h2>
  <h3>Bachelors in Computer Science </h3>
  <p> Bighamton University - 2027 </p>
-  
 </td>
-<td><h2> Skills</h2>
+ 
+<td>
+<h2> Skills</h2>
  <ul>
     <li> Excel </li>
     <li> C++ </li>
-    <li> Advanced Computer Knowledge  </li>
+    <li> Advanced </li>
     <li> HTML/CSS </li>
-   </ul>
+ </ul>
 </td>
 </tr>
 </table>
 
-  <table style="width:100%">
+<table style="width:100%">
 <tr>
 <td>
  <h2> Experience</h2>
@@ -38,11 +39,12 @@
     <li> Doing that </li>
    </ul>
 </td>
-<td><h2> References </h2>
+ 
+<td>
+<h2> References </h2>
  <ul>
     <li> Bill gates </li>
     <li> My dad </li>
-    
    </ul>
 </td>
 </tr>
