--- a/MyResume.html
+++ b/MyResume.html
@@ -35,7 +35,7 @@
  <h2> Experience</h2>
  <h3>Software Developer | July 2027 - Current </h3>
  <ul>
-    <li> Doing this </li>
+    <li> Doing this like hard stff id </li>
     <li> Doing that </li>
    </ul>
 </td>
