--- a/MyResume.html
+++ b/MyResume.html
@@ -33,7 +33,7 @@
 <tr>
 <td>
  <h2> Experience</h2>
- <h3>Software Developer <br> July 2027 - Current </h3>
+ <h3>Software Developer | July 2027 - Current </h3>
  <ul>
     <li> Doing this like hard stff id </li>
     <li> Doing that </li>
