--- a/MyResume.html
+++ b/MyResume.html
@@ -35,17 +35,19 @@
  <h2> Experience</h2>
  <h3>Software Developer | July 2027 - Current </h3>
  <ul>
-    <li> Doing this like hard stff id </li>
-    <li> Doing that </li>
+    <li> Developed and maintained wed applications using laguages such as python and javascript. </li>
+    <li> Advanced pre-developed codes and algorithums, improving application preformance and reduced run time by atleast 25%. </li>
+   </ul>
+ <h3>System Analyst | June 2024 - July 2025 </h3>
+ <ul>
+    <li> Gathered and anaylzed business needs/requirements from stakeholders to implement effective system solutions. </li>
+    <li> Conducted system testing to ensure implementation met user requirements and effective standards.</li>
    </ul>
 </td>
  
 <td>
-<h2> References </h2>
- <ul>
-    <li> Bill gates </li>
-    <li> My dad </li>
-   </ul>
+<h2> Reference </h2>
+<p>Sundar Pichai <br> CEO | Google <br> <a href="idontknowhisemail@gmail.com"> idontknowhisemail@gmail.com </a> </p>
 </td>
 </tr>
 </table>
