--- a/MyResume.html
+++ b/MyResume.html
@@ -13,8 +13,10 @@
 <tr>
 <td>
  <h2> Education</h2>
+  <h3>Associates in Computer Science </h3>
+ <p> Borough of Manhattan Community College | August 2023 - June 2025 </p>
  <h3>Bachelors in Computer Science </h3>
- <p> Bighamton University - 2027 </p>
+ <p> Bighamton University | August 2025 - May 2027 </p>
 </td>
  
 <td>
@@ -47,7 +49,7 @@
  
 <td>
 <h2> Reference </h2>
-<p>Sundar Pichai <br> CEO | Google <br> <a href="idontknowhisemail@gmail.com"> idontknowhisemail@gmail.com </a> </p>
+<p>Sundar Pichai <br><br> CEO | Google <br><br> <a href="idontknowhisemail@gmail.com"> idontknowhisemail@gmail.com </a> </p>
 </td>
 </tr>
 </table>
