--- a/MyResume.html
+++ b/MyResume.html
@@ -9,7 +9,7 @@
   <p style="text-align:center" >New York, New York <br> <a href="mailto:notmyemail@gmail.com"> notmyemail@gmail.com </a> <br> 
   (123)456-7890</p>
   <hr>
-  <table style="width:100%">
+  <table>
 <tr>
 <td>
  <h2> Education</h2>
@@ -22,16 +22,16 @@
 <td>
 <h2> Skills</h2>
  <ul>
-    <li> Excel </li>
-    <li> C++ </li>
-    <li> Advanced </li>
-    <li> HTML/CSS </li>
+    <li>  Critical Thinking </li>
+    <li> Advanced Computer Knowledge  </li>
+    <li> Teamwork/ Collaboration </li>
+    <li>Programming Languages (C, C++, Java, Python)</li>
  </ul>
 </td>
 </tr>
 </table>
 
-<table style="width:100%">
+<table>
 <tr>
 <td>
  <h2> Experience</h2>
