--- a/MyResume.html
+++ b/MyResume.html
@@ -22,9 +22,9 @@
 <td>
 <h2> Skills</h2>
  <ul>
-    <li>  Critical Thinking </li>
-    <li> Advanced Computer Knowledge  </li>
-    <li> Teamwork/ Collaboration </li>
+    <li>  Critical Thinking </li><br>
+    <li> Advanced Computer Knowledge  </li><br>
+    <li> Teamwork/ Collaboration </li><br>
     <li>Programming Languages (C, C++, Java, Python)</li>
  </ul>
 </td>
@@ -39,7 +39,7 @@
  <ul>
     <li> Developed and maintained wed applications using laguages <br> such as python and javascript. </li>
     <li> Advanced pre-developed codes and algorithums, improving <br> application preformance and reduced run time by atleast 25%. </li>
-   </ul>
+   </ul><br>
  <h3>System Analyst | June 2024 - July 2025 </h3>
  <ul>
     <li> Gathered and anaylzed business needs/requirements from <br>stakeholders to implement effective system solutions. </li>
