--- a/MyResume.html
+++ b/MyResume.html
@@ -37,13 +37,13 @@
  <h2> Experience</h2>
  <h3>Software Developer | July 2027 - Current </h3>
  <ul>
-    <li> Developed and maintained wed applications using laguages <br> such as python and javascript. </li>
-    <li> Advanced pre-developed codes and algorithums, improving <br> application preformance and reduced run time by atleast 25%. </li>
+    <li> Developed and maintained wed applications using laguages such as <br> python and javascript. </li><br>
+    <li> Advanced pre-developed codes and algorithums, improving application <br> preformance and reduced run time by atleast 25%. </li>
    </ul><br>
  <h3>System Analyst | June 2024 - July 2025 </h3>
  <ul>
-    <li> Gathered and anaylzed business needs/requirements from <br>stakeholders to implement effective system solutions. </li>
-    <li> Conducted system testing to ensure implementation met user <br> requirements and effective standards.</li>
+    <li> Gathered and anaylzed business needs/requirements from stakeholders to <br> implement effective system solutions. </li><br>
+    <li> Conducted system testing to ensure implementation met user requirements <br>and effective standards.</li>
    </ul>
 </td>
  
