--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
  <BODY>
 <h1> Hello and Welcome to My Homepage </h1>
  <h2>These are some things about me: </h2>
-  <h2>My Hobbies: </h2>
+  <h2>My Favorite Hobbies: </h2>
   <ul>
-<li>Sewing </li>
+<li><h3> Sewing</h3> </li>
+   <p> Ever since I was young I loved to sew. My grandmother kept some sewing supplies in a cookie tin and when ever i was allowed to,
+    I would make anything i could out of anything. Today, my love of sewing has only grown and I love to make clothing in my spare 
+   time</p> 
+   <img src="https://static01.nyt.com/images/2021/09/27/dining/27containers1/27containers1-superJumbo.jpg" width="300" height="200">
 <li>Gardening </li>
-<li>Skating </li>
+   <p>Although I am not the best at it, I love gardening. It's so calming and makes me feel connected to nature. I plan to have a large
+   vegetable and flower garden in the future. </p>
+<li><h3> Skating</h3></li>
+   <p>I both rollerskate and skate on my skateboard from time to time. I mainly skated in highschool since I was apart of a skate club
+   and had more free time but now not so much. I do plan on skating more since its a really fun way to stay active.</p>
   </ul>
  
 <h2>My Favorite Foods: </h2>
