--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
  <TITLE> Cassandra Dennis's Homepage</TITLE>
  <BODY>
-<h1> Hello and Welcome to My Homepage </h1>
+<h1> Hello and Welcome to My Homepage </h1><br><br><br>
  <h2>These are some things about me: </h2>
   <h2>My Favorite Hobbies: </h2>
   <ul>
