--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <h2>My Favorite Hobbies: </h2>
   <ul>
 <li><h3> Sewing</h3> </li>
-   <p> Ever since I was young I loved to sew. My grandmother kept some sewing supplies in a cookie tin and when ever i was allowed to,
-    I would make anything i could out of anything. Today, my love of sewing has only grown and I love to make clothing in my spare 
-   time</p> 
-   <img src="https://static01.nyt.com/images/2021/09/27/dining/27containers1/27containers1-superJumbo.jpg" width="300" height="200"><br>
+   <p> Ever since I was young I loved to sew. My grandmother kept some sewing 
+    supplies in a cookie tin and when ever I was allowed to,<br>
+    I would make anything i could out of anything. Today, my love of sewing has only grown and 
+    I love to make clothing in my spare time</p>  <img src="https://static01.nyt.com/images/2021/09/27/dining/27containers1/27containers1-superJumbo.jpg" width="300" height="200"><br>
 <li><h3> Gardening </h3></li>
    <p>Although I am not the best at it, I love gardening. It's so calming and makes me feel connected to nature. I plan to have a large
    vegetable and flower garden in the future. </p>
