--- a/BMCC.html
+++ b/BMCC.html
@@ -3,14 +3,15 @@
 <head>
 <link rel="stylesheet" href="./style2.css">
 </head>
-<TITLE> My College Info </TITLE>
+<TITLE> My College Life </TITLE>
 <BODY>
-<h1> My College Info </h1>
-  <ul> 
-  <li>College I Attend: BMCC</li>
-  <li>College Level: Undergraduate</li>
-  <li>College Major: <mark> Computer Science </mark> </li>
-<h2> My Current Class Sechdule</h2>    
+<h1> My College Life </h1>
+<p>Currently I attend Borough of Manhattan Community College (BMCC) which has thier main campuses is located downtown Manhattan. BMCC is one of the best community colleges in the state and is well knon for 
+thier high transfer rate. </p>
+  <h3 style="text-align=center">Facts About Me At Bmcc</h3><br><br>
+  <li>College Level: Undergraduate</li><br>
+  <li>College Major: <mark> Computer Science </mark> </li><br>
+<h2> My Current Class Sechdule: </h2><br>    
 </ul>
 <table style="width:100%">
 <tr>
@@ -32,7 +33,7 @@
 </tr>
   <tr>
 <td>Fund. of Computer Syetems</td>
-<td>Mondays & Wednesdays 5:20pm – 7:00pm</td>
+<td>Mondays 5:20pm – 7:00pm</td>
 <td>Wednesdays 5:20pm – 7:00pm</td>
 <td>Spring 2025</td>
 </tr>
