--- a/BMCC.html
+++ b/BMCC.html
@@ -45,6 +45,8 @@ thier high transfer rate. </p>
 </tr>
 </table>
 
+  
+<a href="index.html">Back to Homepage</a> - or - <a href="MyResume.html">About My Experience</a>
 
 </BODY>
 </HTML>
