--- a/BMCC.html
+++ b/BMCC.html
@@ -6,11 +6,12 @@
 <TITLE> My College Life </TITLE>
 <BODY>
 <h1> My College Life </h1>
-<p>Currently I attend Borough of Manhattan Community College (BMCC) which has thier main campuses is located downtown Manhattan. BMCC is one of the best community colleges in the state and is well knon for 
+<p>Currently I attend Borough of Manhattan Community College (BMCC) which has thier main campuses is located downtown Manhattan. BMCC is one of the best community colleges in the state and is well known for 
 thier high transfer rate. </p>
-  <h3 style="text-align=center">Facts About Me At Bmcc</h3><br><br>
+  <h3 style="text-align=center">Facts About Me At BMCC</h3><br><br>
   <li>College Level: Undergraduate</li><br>
   <li>College Major: <mark> Computer Science </mark> </li><br>
+ <img sru= "https://bmccprodstroac.blob.core.windows.net/uploads/2019/07/199Chambers.jpg" width="300" height="250">
 <h2> My Current Class Sechdule: </h2><br>    
 </ul>
 <table style="width:100%">
@@ -43,7 +44,7 @@ thier high transfer rate. </p>
 <td> - </td>
 <td>Spring 2025</td>
 </tr>
-</table>
+</table><br>
 
   
 <a href="index.html">Back to Homepage</a> - or - <a href="MyResume.html">About My Experience</a>
