--- a/BMCC.html
+++ b/BMCC.html
@@ -11,7 +11,7 @@ thier high transfer rate. </p>
   <h3 style="text-align=center">Facts About Me At BMCC</h3><br><br>
   <li>College Level: Undergraduate</li><br>
   <li>College Major: <mark> Computer Science </mark> </li><br>
- <img sru= "https://bmccprodstroac.blob.core.windows.net/uploads/2019/07/199Chambers.jpg" width="300" height="250">
+ <img sru= "https://pcfandtypecodewebstuff.s3.amazonaws.com/images/1.ext.KerunIp.0416_9823_cc.max-1600x1600.jpg" width="300" height="250">
 <h2> My Current Class Sechdule: </h2><br>    
 </ul>
 <table style="width:100%">
