--- a/MyResume.html
+++ b/MyResume.html
@@ -52,12 +52,12 @@
 <p>Sundar Pichai <br><br> CEO | Google <br><br> <a href="idontknowhisemail@gmail.com"> idontknowhisemail@gmail.com </a> </p>
 </td>
 </tr>
-</table>
+</table><br>
 
   
 
   
-<a href="BMCC.html">go to bmcc page</a>
+<a href="index.html">Back to Homepage</a> - or - <a href="BMCC.html">About My College Life</a>
 
 
 </BODY>
