--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 </head>
  <TITLE> Cassandra Dennis's Homepage</TITLE>
  <BODY>
-<h1> Hello and Welcome to My Homepage </h1><br><br><br>
- <h2>These Are Some of My Favorite Hobbies: </h2>
+<h1> <b>Hello and Welcome to My Homepage</b> </h1><br><br><br>
+ <h2> <b> These Are Some of My Favorite Hobbies: </b></h2>
   <ul>
 <li><h3>&nbsp;Sewing</h3> </li>
-   <p> Ever since I was young I loved to sew. My grandmother kept some sewing supplies in a cookie tin and whenever I was allowed to,<br>I would make anything out of anything. Today, my love of sewing has only grown and  I love to make clothing in my spare time</p>  <img src="https://static01.nyt.com/images/2021/09/27/dining/27containers1/27containers1-superJumbo.jpg" width="300" height="200"><br>
+   <p> Ever since I was young I loved to sew. My grandmother kept some sewing supplies in a cookie tin and whenever I was allowed to,I would make anything out of anything. Today, my love of sewing has only grown and  I love to make clothing in my spare time</p>  <img src="https://static01.nyt.com/images/2021/09/27/dining/27containers1/27containers1-superJumbo.jpg" width="300" height="200"><br>
 
 <li><h3>&nbsp;Gardening </h3></li>
    <p>Although I am not the best at it, I love gardening. It's so calming and makes me feel connected to nature. I plan to have a large
