--- a/BMCC.html
+++ b/BMCC.html
@@ -11,10 +11,10 @@ thier high transfer rate. </p>
   <h3 style="text-align=center">Facts About Me At BMCC</h3><br><br>
   <li>College Level: Undergraduate</li><br>
   <li>College Major: <mark> Computer Science </mark> </li><br>
- <img sru= "https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Tribeca_cuny_mcc.jpg/220px-Tribeca_cuny_mcc.jpg" width="300" height="250">
-<h2> My Current Class Sechdule: </h2><br>    
+
+<h2> My Current Class Sechdule: </h2>    
 </ul>
-<table style="width:100%">
+<table>
 <tr>
 <th>Course Name</th>
 <th colspan="2">Day and Time</th>
