--- a/BMCC.html
+++ b/BMCC.html
@@ -6,13 +6,13 @@
 <TITLE> My College Life </TITLE>
 <BODY>
 <h1> My College Life </h1>
-<p>Currently I attend Borough of Manhattan Community College (BMCC) which has thier main campuses is located downtown Manhattan. BMCC is one of the best community colleges in the state and is well known for 
+<p>Currently I attend Borough of Manhattan Community College (BMCC) which has thier main campuses is located downtown Manhattan. <br> BMCC is one of the best community colleges in the state and is well known for 
 thier high transfer rate. </p>
-  <h3 style="text-align=center">Facts About Me At BMCC</h3><br><br>
+  <h2 style="text-align= center">Facts About Me At BMCC</h2><br><br>
   <li>College Level: Undergraduate</li><br>
-  <li>College Major: <mark> Computer Science </mark> </li><br>
+  <li>College Major: Computer Science </li><br>
 
-<h2> My Current Class Sechdule: </h2>    
+<h3> My Current Class Sechdule: </h3>    
 </ul>
 <table>
 <tr>
