--- a/BMCC.html
+++ b/BMCC.html
@@ -5,13 +5,13 @@
 </head>
 <TITLE> My College Life </TITLE>
 <BODY>
-<h1> My College Life </h1>
-<p>Currently I attend Borough of Manhattan Community College (BMCC) which has thier main campuses is located downtown Manhattan. <br> BMCC is one of the best community colleges in the state and is well known for 
+<br><br><h1> My College Life </h1>
+<p>Currently, I attend Borough of Manhattan Community College (BMCC) which has thier main campuses is located downtown Manhattan. <br> BMCC is one of the best community colleges in the state and is well known for 
 thier high transfer rate. </p>
   <h2 style="text-align= center">Facts About Me At BMCC</h2><br><br>
   <li>College Level: Undergraduate</li><br>
   <li>College Major: Computer Science </li><br>
-
+<img sru="https://www.shutterstock.com/image-photo/new-york-city-may-16-600nw-174045986.jpg">
 <h3> My Current Class Sechdule: </h3>    
 </ul>
 <table>
