--- a/BMCC.html
+++ b/BMCC.html
@@ -5,7 +5,7 @@
 </head>
 <TITLE> My College Life </TITLE>
 <BODY>
-<br><br><h1> My College Life </h1>
+<h1> My College Life </h1>
 <p>Currently, I attend Borough of Manhattan Community College (BMCC) which has thier main campuses is located downtown Manhattan. <br> BMCC is one of the best community colleges in the state and is well known for 
 thier high transfer rate. </p>
   <h2 style="text-align= center">Facts About Me At BMCC</h2><br><br>
