--- a/MyResume.html
+++ b/MyResume.html
@@ -37,8 +37,8 @@
  <h2> Experience</h2>
  <h3>Software Developer | July 2027 - Current </h3>
  <ul>
-    <li> Developed and maintained wed applications using laguages such as <br> python and javascript. </li><br>
-    <li> Advanced pre-developed codes and algorithums, improving application <br> preformance and reduced run time by atleast 25%. </li>
+    <li> Developed and maintained web applications using languagues such as <br> Python and Javascript. </li><br>
+    <li> Advanced pre-developed codes and algorithums, improving application <br> preformance and reduced run time by at least 25%. </li>
    </ul><br>
  <h3>System Analyst | June 2024 - July 2025 </h3>
  <ul>
